# MentalLLM

./: .gitignore  Dockerfile  LICENSE  Makefile  Modelfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  requirements.txt  streamlit_app.py
models/: Modelfile
scripts/: fine_tuning.py  prepare_data.py
