[project]
name = "mentalllm"
version = "0.1.0"
description = "A lightweight library for training and deploying mental health-focused language models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=3.4.1,<4.0.0",
    "fastapi>=0.116.1",
    "huggingface-hub[hf-xet]>=0.34.2",
    "loguru>=0.7.3",
    "ollama>=0.5.1",
    "peft>=0.16.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "unsloth[windows]",
    "uvicorn>=0.35.0",
    "vllm>=0.10.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook<7",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
